--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "file-loader": "^4.2.0",
     "react-bootstrap": "^1.0.0-beta.12",
     "react-burger-menu": "^2.6.11",
-    "url-loader": "^2.1.0"
+    "url-loader": "^2.1.0",
+    "set-value": ">=2.0.1"
   },
   "description": ""
 }
